apps/rh-dashboard/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: rh-dashboard
spec:
  type: ClusterIP
  selector:
    app: rh-dashboard
  ports:
    - name: http
      port: 8080
      targetPort: http
